# NeoCalc

./: .gitignore  .gitmodules  Cargo.toml  README.md  THEMING.md  pyproject.toml  run_debug.sh
.github/workflows/: binaries_build.yml  distribution.yml
backend/: Cargo.toml
backend/crates/core/: Cargo.toml
backend/crates/core/src/: engine.rs  lib.rs  utils.rs
backend/crates/python/: Cargo.toml
backend/crates/python/src/: calculator.rs  lib.rs  utils.rs
backend/crates/python/src/managers/: display.rs
backend/src/: calculator.rs  lib.rs  utils.rs
backend/src/engine/: ast.rs  mod.rs  parser.rs  types.rs
backend/src/engine/functions/: bitwise.rs  complex_ops.rs  core_funcs.rs  financial.rs  hyperbolic.rs  mod.rs  statistics.rs  trigonometry.rs
backend/src/managers/: display.rs
backend/src/managers/calculator/: constants.rs  helpers.rs  mod.rs  ui.rs
backend/tests/: engine_tests.rs  stress_tests.rs
launcher/: Cargo.toml
launcher/src/: main.rs
locale/es/LC_MESSAGES/: neocalc.mo  neocalc.po
locale/fr/LC_MESSAGES/: neocalc.mo  neocalc.po
locale/it/LC_MESSAGES/: neocalc.mo  neocalc.po
locale/pt_BR/LC_MESSAGES/: neocalc.mo  neocalc.po
locale/pt_PT/LC_MESSAGES/: neocalc.mo  neocalc.po
python/neocalc/: app.py
python/neocalc/core/: actions.py  backend.py
python/neocalc/styling/: base.css  manager.py
python/neocalc/styling/themes/: catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin-mocha.css  do-be-doo.css  dracula.css  gruvbox.css  material.css  monokai.css  nord-light.css  nord.css  rose-pine-dawn.css  rose-pine.css
python/neocalc/ui/components/: display.py  header.py  sidebar.py
python/neocalc/ui/dialogs/: about.py  preferences.py  shortcuts.py
python/neocalc/ui/grids/: base.py  financial.py  programming.py  scientific.py  standard.py
python/neocalc/ui/widgets/: calculator.py
python/neocalc/ui/windows/: main_window.py
python_gui/: app.py
python_gui/calculator/: __init__.py  about.py  actions.py  backend.py  grid_base.py  grid_scientific.py  grid_standard.py  shortcuts.py  style.css  styling.py  view.py  window.py
python_gui/calculator/themes/: catppuccin-frappe.css  catppuccin-latte.css  catppuccin-macchiato.css  catppuccin.css  catppuccin_frappe.css  catppuccin_latte.css  catppuccin_macchiato.css  dracula.css  gruvbox.css  monokai.css  nord.css
python_gui/calculator/ui/: calc_manager.py  display_manager.py  header.py  sidebar.py  window.py
rust_extension/: Cargo.toml
rust_extension/src/: engine.rs  lib.rs  managers.rs
rust_extension/src/engine/: mod.rs  parser.rs
rust_extension/src/engine/functions/: core_funcs.rs  hyperbolic.rs  mod.rs
rust_extension/src/managers/: display.rs  mod.rs
rust_extension/src/managers/calculator/: constants.rs  helpers.rs  mod.rs  ui.rs
rust_frontend/: Cargo.toml
rust_frontend/src/: main.rs
rust_runner/: Cargo.toml
rust_runner/src/: main.rs
