[workspace]
resolver = "2"
members = [
    "launcher",
    "backend/crates/core",
    "backend/crates/python",
]

[workspace.dependencies]
neocalc-core = { path = "backend/crates/core" }
neocalc-backend = { path = "backend/crates/python" }
num = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
thiserror = "2.0"
inventory = "0.3"
pyo3 = { version = "0.27.2" }

