[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoCalc"
version = "1.0"
description = "A simple calculator made in Python with the GTK4 toolkit."
authors = [
    { name="Nilton Perim Neto", email="niltonperimneto@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "PyGObject>=3.46.0",
    "pycairo>=1.25.0",
]

[project.urls]
Repository = "https://github.com/niltonperimneto/NeoCalc.git"

[tool.setuptools.packages.find]
where = ["python_gui"]

[project.scripts]
NeoCalc = "app:main"
