[build-system]
requires = ["setuptools >= 80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NeoCalc"
version = "1.0"
description = "Calculator made in GTK4."
authors = [
    { name="Nilton Perim Neto", email="niltonperimneto@gmail.com" }
]
license = "GPL-3.0-or-later"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "PyGObject>=3.54.5",
    "pycairo>=1.29.0",
]

[project.urls]
Repository = "https://github.com/niltonperimneto/NeoCalc.git"

[tool.setuptools.packages.find]
where = ["python"]

[project.scripts]
NeoCalc = "app:main"
