[package]
name = "neocalc_backend"
version = "1.0.0"
edition = "2024"

[lib]
name = "neocalc_backend"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.2" }
pyo3-async-runtimes = { version = "0.27", features = ["tokio-runtime"] }
tokio = { version = "1.48", features = ["full"] }
num = "0.4"
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
logos = "0.16"
once_cell = "1.19"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
